# vala-topbar

./: .gitignore  README.md  app.vala  applications.vala  bar.vala  bar_center.vala  bar_left.vala  main.vala  meson.build  uncrustify.cfg
assets/: style.css  style.scss  topbar.gresource.xml
scripts/: bluetooth.sh  compile.sh  install.sh  toggle.sh
services/: niri_events.vala  services.vala
src/: app.vala  ipc.vala  meson.build
src/osd/: volume_osd.vala
src/services/: avg_cpu.vala  battery.vala  bluetooth.vala  network.vala  niri_ipc.vala  screen_rec.vala  services.vala  system_resources.vala  tray.vala  utils.vala  volume.vala
src/ui/: bar.vala  bar_center.vala  bar_left.vala  bar_right.vala  niri_workspaces.vala  system_resources.vala  tray.vala
tools/: meson.build  topbarctl.vala
